<resources>
    <string name="app_name">Calculadora</string>
    <string name="primeiro_numero">Digite o primeiro número:</string>
    <string name="segundo_numero">Digite o segundo número:</string>
    <string name="calcular">Calcular</string>
    <string name="soma">+</string>
    <string name="subtracao">-</string>
    <string name="multiplicacao">*</string>
    <string name="divisao">/</string>
</resources>