<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    android:layout_margin="20dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etvPrimeiroNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/primeiro_numero"
        android:textColor="@color/blue"
        android:inputType="number"
        android:padding="16dp"
        />

    <EditText
        android:id="@+id/etvSegundoNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/segundo_numero"
        android:textColor="@color/blue"
        android:inputType="number"
        android:padding="16dp"
        />

    <RadioGroup
        android:id="@+id/rgOperacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <RadioButton
            android:id="@+id/rbSoma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soma"
            android:textColor="@color/blue"/>
        <RadioButton
            android:id="@+id/rbSubtracao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtracao"
            android:textColor="@color/blue"/>
        <RadioButton
            android:id="@+id/rbMultiplicacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiplicacao"
            android:textColor="@color/blue"/>
        <RadioButton
            android:id="@+id/rbDivisao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divisao"
            android:textColor="@color/blue"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:layout_margin="20dp"
        />



    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="Hello World!"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>